--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="publication-links">
                                 <!-- PDF Link. -->
                                 <span class="link-block">
-                                    <a href="https://arxiv.org/pdf/2309.05519.pdf"
+                                    <a href="#"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
@@ -83,7 +83,7 @@
                                 </span>
 
                                 <span class="link-block">
-                                    <a href="https://7d83cfa205b1f79ea8.gradio.live" target="_blank"
+                                    <a href="#" target="_blank"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fa fa-laugh"></i>
@@ -94,7 +94,7 @@
 
                                 <!-- Code Link. -->
                                 <span class="link-block">
-                                    <a href="https://github.com/NExT-GPT/NExT-GPT"
+                                    <a href="https://github.com/Zeqiang-Lai/Mini-DALLE3"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
