--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
                                 <a href="https://zeqiang-lai.github.io/">Zeqiang Lai</a><sup>1</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="https://scholar.google.com/citations?user=02RXI00AAAAJ&hl=en">Xizhou Zhu</a><sup>34</sup>,
+                                <a href="https://scholar.google.com/citations?user=02RXI00AAAAJ&hl=en">Xizhou Zhu</a><sup>23</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="https://jifengdai.org/">Jifeng Dai</a><sup>34</sup>,
+                                <a href="https://jifengdai.org/">Jifeng Dai</a><sup>23</sup>,
                             </span>
                             <span class="author-block">
                                 <a href="https://scholar.google.com/citations?user=gFtI-8QAAAAJ&hl=en">Yu Qiao</a><sup>4</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="https://whai362.github.io/">Wenhai Wang</a><sup>2</sup>,
+                                <a href="https://whai362.github.io/">Wenhai Wang</a><sup>4</sup>,
                             </span>
                         </div>
 
                         <div class="is-size-5 publication-authors" style="margin-top: 10px;">
-                            <span class="author-block"><sup>1</sup>Beijing Institute of Technology, <sup>2</sup>CUHK, <sup>3</sup>Tsinghua University,
-                                <sup>4</sup>Shanghai AI Laboratory</span>
+                            <span class="author-block"><sup>1</sup>Beijing Institute of Technology, <sup>2</sup>Shanghai AI Laboratory, <sup>3</sup>Tsinghua University,
+                                <sup>4</sup>CUHK</span>
                         </div>
 
                         <div class="is-size-5 publication-authors" style="margin-top: 10px;">
@@ -210,7 +210,7 @@
                 <div class="column is-four-fifths">
                     <p>We introduce a new task - interactive text to image (iT2I), where people can interact with LLM
                         for inter- leaved high-quality image generation/edit/refinement and question answering with
-                        stronger images and text corre- spondences using natural language. </p>
+                        stronger images and text correspondences using natural language. </p>
                     <br>
                     <img style="display: inline-block;width: 100%;max-height: 400px;" src="./static/images/teaser.png">
 
