--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </span>
 
                                 <span class="link-block">
-                                    <a href="#" target="_blank"
+                                    <a href="http://139.224.23.16:10085" target="_blank"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fa fa-laugh"></i>
