--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
                     <div class="column has-text-centered">
                         <h1 class="title is-1 publication-title"
                             style="display: flex;flex-direction: row;align-items: center;justify-content: center;margin-bottom: 5px;">
-                            <span style="color: coral;">Mini-</span>
-                            DALL•E 3:
+                            <span style="color: coral;">Mini-</span>DALL•E 3:
                         </h1>
-                        <h1 class="title is-2 publication-title">Interactive Text to Image Generation by </br> Prompting
+                        <h1 class="title is-2 publication-title">Interactive Text to Image by </br> Prompting
                             Large
                             Language Models</h1>
                         <div class="is-size-5 publication-authors">
@@ -308,7 +307,7 @@
             <h2 class="title">BibTeX</h2>
             <pre><code>@misc{minidalle3,
     author={Lai, Zeqiang and Zhu, Xizhou and Dai, Jifeng and Qiao, Yu and Wang, Wenhai},
-    title={Mini-DALLE3: Interactive Text to Image Generation by Prompting Large Language Models},
+    title={Mini-DALLE3: Interactive Text to Image by Prompting Large Language Models},
     year={2023},
     url={https://github.com/Zeqiang-Lai/Mini-DALLE3},
 }
